--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,6 +28,7 @@ roomCompiler = "2.6.1"
 roomKtx = "2.6.1"
 roomRuntime = "2.6.1"
 storage = "1.5.0"
+timber = "5.0.1"
 vico = "2.0.1"
 hiltCommon = "1.2.0"
 workRuntimeKtx = "2.10.0"
@@ -71,6 +72,7 @@ okhttp3-logging-interceptor = { module = "com.squareup.okhttp3:logging-intercept
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 androidx-storage = { group = "androidx.test.services", name = "storage", version.ref = "storage" }
 # For Jetpack Compose.
+timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 vico-compose = { group = "com.patrykandpatrick.vico", name = "compose", version.ref = "vico" }
 
 # For Material 2 theming in Jetpack Compose.
